// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EmbeddedList — full metadata snapshot should match snapshot for custom table name entity 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [
    {
      "elementConstructor": null,
      "elementFields": null,
      "elementType": "string",
      "key": "tags",
      "parentFkColumn": "user_with_custom_table_id",
      "parentPkColumn": "id",
      "tableName": "custom_user_tags",
    },
  ],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "UserWithCustomTable",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`EmbeddedList — full metadata snapshot should match snapshot for embeddable collection entity 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [
    {
      "elementConstructor": [Function],
      "elementFields": [
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "street",
          "max": null,
          "min": null,
          "name": "street",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "city",
          "max": null,
          "min": null,
          "name": "city",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "zip",
          "max": null,
          "min": null,
          "name": "zip",
          "nullable": true,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
      ],
      "elementType": null,
      "key": "addresses",
      "parentFkColumn": "user_with_addresses_id",
      "parentPkColumn": "id",
      "tableName": "user_with_addresses_addresses",
    },
  ],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "UserWithAddresses",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "name",
      "max": null,
      "min": null,
      "name": "name",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`EmbeddedList — full metadata snapshot should match snapshot for multiple lists entity 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [
    {
      "elementConstructor": null,
      "elementFields": null,
      "elementType": "string",
      "key": "tags",
      "parentFkColumn": "user_with_multiple_lists_id",
      "parentPkColumn": "id",
      "tableName": "user_with_multiple_lists_tags",
    },
    {
      "elementConstructor": null,
      "elementFields": null,
      "elementType": "integer",
      "key": "scores",
      "parentFkColumn": "user_with_multiple_lists_id",
      "parentPkColumn": "id",
      "tableName": "user_with_multiple_lists_scores",
    },
    {
      "elementConstructor": [Function],
      "elementFields": [
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "street",
          "max": null,
          "min": null,
          "name": "street",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "city",
          "max": null,
          "min": null,
          "name": "city",
          "nullable": false,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
        {
          "arrayType": null,
          "collation": null,
          "comment": null,
          "computed": null,
          "decorator": "Field",
          "default": null,
          "embedded": null,
          "encrypted": null,
          "enum": null,
          "hideOn": [],
          "key": "zip",
          "max": null,
          "min": null,
          "name": "zip",
          "nullable": true,
          "order": null,
          "precision": null,
          "readonly": false,
          "scale": null,
          "schema": null,
          "transform": null,
          "type": "string",
        },
      ],
      "elementType": null,
      "key": "addresses",
      "parentFkColumn": "user_with_multiple_lists_id",
      "parentPkColumn": "id",
      "tableName": "user_with_multiple_lists_addresses",
    },
  ],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "UserWithMultipleLists",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`EmbeddedList — full metadata snapshot should match snapshot for primitive collection entity 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [
    {
      "elementConstructor": null,
      "elementFields": null,
      "elementType": "string",
      "key": "tags",
      "parentFkColumn": "user_with_tags_id",
      "parentPkColumn": "id",
      "tableName": "user_with_tags_tags",
    },
  ],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "UserWithTags",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "name",
      "max": null,
      "min": null,
      "name": "name",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`EmbeddedList — metadata staging should stage embeddable embedded list in Symbol.metadata 1`] = `
{
  "elementConstructor": [Function],
  "elementType": null,
  "key": "addresses",
  "tableName": null,
}
`;

exports[`EmbeddedList — metadata staging should stage primitive embedded list in Symbol.metadata 1`] = `
{
  "elementConstructor": null,
  "elementType": "string",
  "key": "tags",
  "tableName": null,
}
`;

exports[`EmbeddedList — resolved metadata should resolve embeddable collection metadata 1`] = `
{
  "elementConstructor": [Function],
  "elementFields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "street",
      "max": null,
      "min": null,
      "name": "street",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "city",
      "max": null,
      "min": null,
      "name": "city",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "zip",
      "max": null,
      "min": null,
      "name": "zip",
      "nullable": true,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "elementType": null,
  "key": "addresses",
  "parentFkColumn": "user_with_addresses_id",
  "parentPkColumn": "id",
  "tableName": "user_with_addresses_addresses",
}
`;

exports[`EmbeddedList — resolved metadata should resolve primitive collection metadata 1`] = `
{
  "elementConstructor": null,
  "elementFields": null,
  "elementType": "string",
  "key": "tags",
  "parentFkColumn": "user_with_tags_id",
  "parentPkColumn": "id",
  "tableName": "user_with_tags_tags",
}
`;
